--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,7 @@ services:
       depends_on:
         - zookeeper
     rediscluster:
+        platform: linux/amd64
         image: grokzen/redis-cluster:6.2.0
         environment:
             - IP=0.0.0.0
