chore(ci): add cython-lint checker for ddtrace internal cython files (#5560)
This PR adds a new CI pre-check tool
[cython-lint](https://github.com/MarcoGorelli/cython-lint) which is for
linting Cython *.pyx files.

I have included the fixes for the violations it found for the
`ddtrace/internal/*.pyx` files.

Most of the violations are due to line length or multiple statements on
one line, but it did find a few unused imports or variables.


<details>
<summary> <code>$ cython-lint ddtrace/internal/</code> (fixed in this
PR) </summary>


```
ddtrace/internal/_encoding.pyx:177:21: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:183:21: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:273:21: E703 statement ends with a semicolon
ddtrace/internal/_encoding.pyx:274:30: E741 ambiguous variable name 'l'
ddtrace/internal/_encoding.pyx:471:20: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:478:24: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:506:13: E722 do not use bare 'except'
ddtrace/internal/_encoding.pyx:554:32: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:556:32: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:580:32: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:582:32: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:606:24: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:608:24: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:612:28: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:614:28: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:617:24: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.pyx:619:24: E701 multiple statements on one line (colon)
ddtrace/internal/_encoding.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -237,6 +237,9 @@ jobs:
           name: "Mypy check"
           command: riot run -s mypy
       - run:
+          name: "cython-lint check"
+          command: riot run -s cython-lint
+      - run:
           name: "Codespell check"
           command: riot run -s codespell
       - run:
