--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ commands:
     description: "Install riot"
     steps:
       # Make sure we install and run riot on Python 3
-      - run: pip3 install https://github.com/DataDog/riot.git#emmett.butler/hash-consistency
+      - run: pip3 install git+https://github.com/DataDog/riot.git@emmett.butler/hash-consistency
 
   save_pip_cache:
     description: "Save pip cache directory"
