--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -19,8 +19,9 @@ jobs:
         # https://github.com/actions/checkout/issues/766
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
-      - name: Set python interpreters
-        run: pyenv global 3.10.3 2.7.18 3.5.10 3.6.15 3.7.13 3.8.13 3.9.11 3.11.0
+      - name: List available Python versions
+        run: pyenv versions
+        run: pyenv global
 
       - name: Install Dependencies
         run: pip install --upgrade pip && pip install riot
