--- a/.github/workflows/requirements-locks.yml
+++ b/.github/workflows/requirements-locks.yml
@@ -19,6 +19,9 @@ jobs:
         # https://github.com/actions/checkout/issues/766
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
+      - name: Set python interpreters
+        run: pyenv global 3.10 2.7 3.5 3.6 3.7 3.8 3.9 3.11 3.12
+
       - name: Install Dependencies
         run: pip install --upgrade pip && pip install riot
 
