--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ exclude = '''
   | ddtrace/profiling/collector/stack.pyx$
   | ddtrace/profiling/exporter/pprof_.*_pb2.py$
   | ddtrace/profiling/exporter/pprof.pyx$
+  | ddtrace/datadog/ddup.pyx$
   | ddtrace/vendor/
   | \.eggs
   | \.git
