fix(django): patch components on import (#5455)
This change ensures that the Django integration patches the relevant
methods and functions only when the containing modules are imported,
instead of force-loading them and causing potential side effects.

(cherry picked from commit 6b10c4d8980e806e42ef86a7b498d59296d344d5)

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ exclude=
   ddtrace/profiling/exporter/pprof_pre312_pb2.py
   tests/profiling/simple_program_gevent.py
   tests/contrib/grpc/hello_pb2.py
+  tests/contrib/django_celery/app/*
 
 # Ignore:
 # A003: XXX is a python builtin, consider renaming the class attribute
