--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,7 +223,7 @@ postgres_server: &postgres_server
 testagent: &testagent
   image: *testagent_image
   environment:
-    - LOG_LEVEL=DEBUG
+    - LOG_LEVEL=WARNING
     - SNAPSHOT_DIR=/snapshots
     - SNAPSHOT_CI=1
 
