--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,7 +143,7 @@ services:
         volumes:
             - ./tests/snapshots:/snapshots
         environment:
-            - LOG_LEVEL=DEBUG
+            - LOG_LEVEL=WARNING
             - SNAPSHOT_DIR=/snapshots
             - SNAPSHOT_CI
     vertica:
