--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,6 +116,7 @@ exclude_dirs = [
   "ddtrace/internal/rate_limiter.py",
   "ddtrace/internal/schema/__init__.py",
   "ddtrace/internal/schema/span_attribute_schema.py",
+  "ddtrace/internal/serverless/mini_agent.py",
   "ddtrace/internal/uwsgi.py",
   "ddtrace/internal/wrapping.py",
   "ddtrace/profiling/collector/_lock.py",
