--- a/ddtrace/appsec/iast/_taint_tracking/CMakeLists.txt
+++ b/ddtrace/appsec/iast/_taint_tracking/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15...3.22)
-set(APP_NAME _taint_tracking)
+set(APP_NAME _native)
 
 project(${APP_NAME})
 
@@ -21,11 +21,11 @@ message(STATUS "PYTHON_INCLUDE_DIRS = ${PYTHON_INCLUDE_DIRS}")
 
 
 get_filename_component(PARENT_DIR ${CMAKE_CURRENT_LIST_DIR} DIRECTORY)
-file(GLOB SOURCE_FILES "*.cpp" "TaintedObject/*.cpp")
-file(GLOB HEADER_FILES "*.h" "TaintedObject/*.h")
+file(GLOB SOURCE_FILES "*.cpp" "TaintedObject/*.cpp" "InputInfo/*.cpp" "TaintRange/*.cpp")
+file(GLOB HEADER_FILES "*.h" "TaintedObject/*.h" "InputInfo/*.h" "TaintRange/*.h")
 
 
-add_library(${APP_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES} _native.cpp)
+add_library(${APP_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES} _native.cpp Constants.h)
 
 set_target_properties(
         ${APP_NAME}
