--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "word_counter"
+name = "matcher"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "word_counter"
+name = "matcher"
 crate-type = ["cdylib"]
 
 [dependencies]
