--- a/.github/workflows/lib-injection.yml
+++ b/.github/workflows/lib-injection.yml
@@ -84,9 +84,9 @@ jobs:
             --verbose
       - name: Ensure the correct ddtrace version is installed
         run: |
-          export inject_dir=$(pwd)
-          cd /tmp
-          PYTHONPATH=$inject_dir/lib-injection python -c "import ddtrace; exit(1) if ddtrace._version.version_tuple[:2] != (1, 10) else exit()"
+          sudo chmod -R go+rX $(pwd)
+          echo $PYTHONPATH
+          PYTHONPATH=$PYTHONPATH:$(pwd)/lib-injection python -c "import ddtrace; exit(1) if ddtrace._version.version_tuple[:2] != (1, 10) else exit()"
       - name: Build test app
         run: |
           docker build \
