fix C++ compile errors

--- a/ddtrace/appsec/iast/_taint_tracking/CMakeLists.txt
+++ b/ddtrace/appsec/iast/_taint_tracking/CMakeLists.txt
@@ -3,6 +3,8 @@ set(APP_NAME _native)
 
 project(${APP_NAME})
 
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall")
+set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
