--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ ddtrace/profiling/collector/stack.c
 ddtrace/profiling/exporter/pprof.c
 ddtrace/profiling/_build.c
 ddtrace/internal/_encoding.c
+ddtrace/internal/periodic.c
 ddtrace/internal/_rand.c
 ddtrace/internal/_tagset.c
 *.so
