--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ commands:
     description: "Install riot"
     steps:
       # Make sure we install and run riot on Python 3
-      - run: pip3 install git+https://github.com/DataDog/riot@fix/dev-package-prefix
+      - run: pip3 install riot==0.17.3
 
   save_pip_cache:
     description: "Save pip cache directory"
