--- a/tests/lib-injection/dd-lib-python-init-test-django/Dockerfile
+++ b/tests/lib-injection/dd-lib-python-init-test-django/Dockerfile
@@ -6,4 +6,7 @@ WORKDIR /src
 ADD . /src
 EXPOSE 18080
 RUN pip install django==4.1.3
+
+# A lot of users run a non-root user, ensure this is supported by the injection mechanism
+USER 1000
 CMD python -m django runserver 0.0.0.0:18080
